--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,6 @@
   <artifactId>SusansProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <dependencies>
+  </dependencies>
 </project>
