Add Jstl dependency

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,16 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <dependencies>
+  <dependency>
   <groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
+  </dependency>
+<dependency>		
+  <groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+</dependency>
+
   </dependencies>
 </project>
