--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,11 @@
 			<version>1.2</version>
 </dependency>
 
+<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-web</artifactId>
+<version>3.1.1.release</version>
+
+</dependency>
   </dependencies>
 </project>
