--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,28 @@
 <dependency>
 <groupId>org.springframework</groupId>
 <artifactId>spring-web</artifactId>
-<version>3.1.1.release</version>
-
+<version>3.1.1.RELEASE</version>
 </dependency>
+
+<dependency>
+<groupId>log4j</groupId>
+<artifactId>log4j</artifactId>
+<version>1.2.16</version>
+</dependency>
+
+<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-jdbc</artifactId>
+<version>3.1.1.RELEASE</version>
+</dependency>
+
+<dependency>
+<groupId>com.h2database</groupId>
+<artifactId>h2</artifactId>
+<version>1.3.164</version>
+</dependency>
+
+
+
   </dependencies>
 </project>
