--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 <version>1.3.164</version>
 </dependency>
 
+<dependency>
+<groupId>org.aspectj</groupId>
+<artifactId>aspectjrt</artifactId>
+<version>1.6.12</version>
+</dependency>
+
+
 
 
   </dependencies>
